Fazendo as atividades criadas aparecerem na tela

--- a/src/components/ListTasks.module.css
+++ b/src/components/ListTasks.module.css
@@ -1,5 +1,6 @@
 .listTasks{
   margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .header{
@@ -36,7 +37,7 @@
 }
 
 /* Content Main List */
-.listContent{
+.listContentWithOutTask{
   margin-top: 1.5rem;
   border-top: 1px solid var(--gray-400);
   border-radius: 8px;
@@ -48,6 +49,10 @@
   justify-content: center; 
 }
 
-.listContent div{
+.listContentWithOutTask div{
   line-height: 1.6;
+}
+
+.listContentWithTask{
+  margin-top: 1.5rem;
 }
