--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -4,16 +4,17 @@
   border-radius: 8px;
   padding: 1rem;
 
-  display: grid;
-  grid-template-columns: 22.45px 1fr 24px;
+  display: flex;
   align-items: flex-start;
-  justify-content: center;
   gap: 0.75rem;
+}
+
+.taskComponent + .taskComponent{
+  margin-top: 0.75rem;
 }
 
 .checkboxInput{
   transition: all 0.1s;
-  margin-top: 0.3rem;
 }
 
 .checkboxInput[data-state="unchecked"]{
@@ -43,11 +44,16 @@
 
 .checkboxIndicator{
   color: var(--gray-100);
+  width: 17.45px;
+  height: 17.45px;
 }
 
 .taskComponent p{
+  flex: 1;
+  flex-wrap: wrap;
   color: var(--gray-100);
   font-size: 0.875rem;
+  word-break: break-all;
   transition: all 0.2s;
 }
 
