--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -35,3 +35,8 @@
 .createButton:not(:disabled):hover{
   background-color: var(--blue);
 }
+
+.createButton:disabled{
+  opacity: 0.7;
+  cursor: not-allowed;
+}
