--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -25,6 +25,12 @@
   border: 2px solid transparent;
   border-radius: 999px; 
   box-sizing: initial;
+  transition: outline 0.2s, background 0.2s;
+}
+
+.checkboxInput[data-state="unchecked"]:hover{
+  outline: 3px solid var(--blue-dark);
+  background-color: rgba(30,111,159, 0.2);
 }
 
 .checkboxInput[data-state="checked"]{
@@ -35,6 +41,13 @@
   border: 2px solid var(--purple-dark);
   border-radius: 999px;
   box-sizing: initial;
+  transition: background 0.2s, outline 0.2s, border 0.2s;
+}
+
+.checkboxInput[data-state="checked"]:hover{
+  background-color: var(--purple);
+  outline: 3px solid var(--purple);
+  border: 2px solid var(--purple);
 }
 
 .checkboxInput[data-state="checked"] + p{
