Corrigindo erro de responsividade

--- a/src/components/ListTasks.module.css
+++ b/src/components/ListTasks.module.css
@@ -56,3 +56,9 @@
 .listContentWithTask{
   margin-top: 1.5rem;
 }
+
+@media(max-width: 360px){
+  .listContentWithOutTask{
+    text-align: center;
+  }
+}
